<resources>
    <string name="app_name" translatable="false">TestTaskLabmedia</string>
    <string name="raund">Raund</string>
    <string name="enemy_nick">Enemy nickname</string>
    <string name="attack">Attack</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="damage">Damage</string>
    <string name="player_turn">Your turn</string>
    <string name="enemy_turn">Enemy turn</string>
</resources>
